@@ -1375,6 +1375,9 @@ decl_stmt|;
 if|if
 condition|(
 name|isRecord
+operator|||
+operator|!
+name|recordStarted
 condition|)
 block|{
 comment|// This Node is a match for an PATH from a forEach attribute,
@@ -1747,10 +1750,6 @@ argument_list|,
 name|val
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|isRecordStarted
-condition|)
 name|valuesAddedinThisFrame
 operator|.
 name|add
@@ -1885,30 +1884,6 @@ operator|||
 operator|!
 name|isRecordStarted
 operator|)
-operator|&&
-operator|!
-name|stack
-operator|.
-name|empty
-argument_list|()
-condition|)
-block|{
-name|Set
-argument_list|<
-name|String
-argument_list|>
-name|cleanThis
-init|=
-name|stack
-operator|.
-name|pop
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|cleanThis
-operator|!=
-literal|null
 condition|)
 block|{
 for|for
@@ -1916,7 +1891,7 @@ control|(
 name|String
 name|fld
 range|:
-name|cleanThis
+name|valuesAddedinThisFrame
 control|)
 block|{
 name|values
@@ -1926,7 +1901,6 @@ argument_list|(
 name|fld
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 block|}
 block|}
