@@ -1466,6 +1466,148 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testClearPreviousRecordFields
+specifier|public
+name|void
+name|testClearPreviousRecordFields
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+name|json
+init|=
+literal|"{\n"
+operator|+
+literal|"'first': 'John',\n"
+operator|+
+literal|"'exams': [\n"
+operator|+
+literal|"{'subject': 'Maths', 'test'   : 'term1', 'marks':90},\n"
+operator|+
+literal|"{'subject': 'Biology', 'test'   : 'term1', 'marks':86}\n"
+operator|+
+literal|"]\n"
+operator|+
+literal|"}\n"
+operator|+
+literal|"{\n"
+operator|+
+literal|"'first': 'Bob',\n"
+operator|+
+literal|"'exams': [\n"
+operator|+
+literal|"{'subject': 'Maths', 'test': 'term1', 'marks': 95\n"
+operator|+
+literal|"}\n"
+operator|+
+literal|",\n"
+operator|+
+literal|"{\n"
+operator|+
+literal|"'subject': 'Biology', 'test'   : 'term1', 'marks': 92}\n"
+operator|+
+literal|"]\n"
+operator|+
+literal|"}"
+decl_stmt|;
+name|JsonRecordReader
+name|streamer
+decl_stmt|;
+name|List
+argument_list|<
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+argument_list|>
+name|records
+decl_stmt|;
+name|streamer
+operator|=
+name|JsonRecordReader
+operator|.
+name|getInst
+argument_list|(
+literal|"/exams"
+argument_list|,
+name|Collections
+operator|.
+name|singletonList
+argument_list|(
+literal|"/**"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|records
+operator|=
+name|streamer
+operator|.
+name|getAllRecords
+argument_list|(
+operator|new
+name|StringReader
+argument_list|(
+name|json
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|4
+argument_list|,
+name|records
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|record
+range|:
+name|records
+control|)
+block|{
+for|for
+control|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|e
+range|:
+name|record
+operator|.
+name|entrySet
+argument_list|()
+control|)
+block|{
+name|assertFalse
+argument_list|(
+name|e
+operator|.
+name|getValue
+argument_list|()
+operator|instanceof
+name|List
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
 block|}
 end_class
 end_unit
